@@ -1,3 +1,9 @@
+2002-07-25  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* SkunkWeb/Services/pycgi.py (_processRequest): d'oh! was raising
+	a PreemptiveResponse in a hook that doesn't expect such a thing
+	and treats it as an error.
+
 2002-07-23  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* SkunkWeb/SkunkWeb/constants.py (PYCGI_JOB): added constant for
